--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "tumax-electron",
+    "name": "tumax",
     "version": "0.0.1",
     "author": "stevenjc.chen <stevenjc.chen@corp.to8to.com>",
     "description": "tumax electron project",
@@ -52,7 +52,13 @@
         }
     },
     "dependencies": {
+        "fs-extra": "^8.1.0"
+    },
+    "devDependencies": {
+        "electron": "^2.0.4",
+        "@types/qs": "^6.5.3",
         "axios": "^0.18.0",
+        "qs": "^6.7.0",
         "typescript": "^3.5.3",
         "vue": "^2.6.10",
         "vue-class-component": "^7.1.0",
@@ -61,9 +67,7 @@
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1",
         "vuex-class": "^0.3.2",
-        "vuex-electron": "^1.0.0"
-    },
-    "devDependencies": {
+        "vuex-electron": "^1.0.0",
         "ajv": "^6.5.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
@@ -79,12 +83,12 @@
         "css-loader": "^0.28.11",
         "del": "^3.0.0",
         "devtron": "^1.4.0",
-        "electron": "^2.0.4",
         "electron-builder": "^20.19.2",
         "electron-debug": "^1.5.0",
         "electron-devtools-installer": "^2.2.4",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
+        "json-loader": "^0.5.7",
         "mini-css-extract-plugin": "0.4.0",
         "multispinner": "^0.2.1",
         "node-loader": "^0.6.0",
@@ -94,8 +98,8 @@
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
         "ts-loader": "^6.0.4",
-        "tslint-loader": "^3.5.4",
         "tslint": "^5.18.0",
+        "tslint-loader": "^3.5.4",
         "url-loader": "^1.0.1",
         "vue-html-loader": "^1.2.4",
         "vue-loader": "^15.2.4",
