--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
         "typings/**/*.ts",
         "src/**/*.ts",
         "src/**/*.tsx",
+        "src/**/*.json",
         "src/**/*.vue"
     ],
     "exclude": ["node_modules"]
